--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
               <h4>Steven</h4>
             </div>
           </div>
+          <div class="item">
+
+          </div>
       </div>
    </body>
 </html>
